--- a/jbase/build.gradle
+++ b/jbase/build.gradle
@@ -28,26 +28,27 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     implementation 'com.android.support:appcompat-v7:26.1.0'
-    compile 'com.android.support:recyclerview-v7:26.1.0'
-    compile 'com.android.support:cardview-v7:26.1.0'
+    api 'com.android.support:recyclerview-v7:26.1.0'
+    api 'com.android.support:cardview-v7:26.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 
-    compile 'com.lzy.net:okgo:3.0.4'
-    compile 'com.lzy.net:okrx2:2.0.2'
-    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    api 'com.lzy.net:okgo:3.0.4'
+    api 'com.lzy.net:okrx2:2.0.2'
+    api 'io.reactivex.rxjava2:rxandroid:2.0.1'
     //刷新
-    compile 'com.github.Aspsine:SwipeToLoadLayout:1.0.4'
+    api 'com.github.Aspsine:SwipeToLoadLayout:1.0.4'
     //Json解析
-    compile 'com.google.code.gson:gson:2.6.2'
-    compile 'com.alibaba:fastjson:1.1.59.android'
+    api 'com.google.code.gson:gson:2.6.2'
+    api 'com.alibaba:fastjson:1.1.59.android'
     //进度条
-    compile 'com.tuyenmonkey:mkloader:1.2.0'
+    api 'com.tuyenmonkey:mkloader:1.2.0'
     //适配器
-    compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.38'
-    compile 'com.gyf.barlibrary:barlibrary:2.3.0'
+    api 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.38'
+    api 'com.gyf.barlibrary:barlibrary:2.3.0'
 
     apply plugin: 'com.github.dcendents.android-maven' // ADD THIS
     group='com.github.jitpack'
+
 }
