--- a/build.gradle
+++ b/build.gradle
@@ -27,3 +27,15 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+ext {
+    versionCode = 1
+    versionName = '1.0'
+
+    libMinSdkVersion = 14
+    minSdkVersion = 16
+    targetSdkVersion = 26
+    compileSdkVersion = 26
+    buildToolsVersion = '26.0.0'
+    supportVersion = '26.1.0'
+}
