--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,8 +23,6 @@ android {
     dataBinding {
         enabled = true
     }
-
-
 }
 
 dependencies {
@@ -35,7 +33,8 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation project(':jbase')
- 
+//    implementation 'com.github.dueeeke.dkplayer:dkplayer-java:3.0.2'
+//    implementation 'com.github.dueeeke.dkplayer:player-exo:3.0.2'
 
 
 }
