--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation project(':jbase')
+    implementation 'org.greenrobot:eventbus:3.0.0'
 //    implementation 'com.github.dueeeke.dkplayer:dkplayer-java:3.0.2'
 //    implementation 'com.github.dueeeke.dkplayer:player-exo:3.0.2'
 
