--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,10 @@ dependencies {
 //    implementation 'com.github.dueeeke.dkplayer:dkplayer-java:3.0.2'
 //    implementation 'com.github.dueeeke.dkplayer:player-exo:3.0.2'
     implementation 'com.ms-square:etsyblur:0.2.1'
+    implementation 'com.zhouyou:signseekbar:1.0.6'
+
+    compile 'com.android.support:design:26.0.0-alpha1'
+
 
 }
   
