--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,7 +41,7 @@ dependencies {
     implementation 'com.ms-square:etsyblur:0.2.1'
     implementation 'com.zhouyou:signseekbar:1.0.6'
 
-    compile 'com.android.support:design:26.0.0-alpha1'
+    implementation 'com.android.support:design:26.0.0-alpha1'
 
 
 }
