--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,7 +42,8 @@ dependencies {
     implementation 'com.zhouyou:signseekbar:1.0.6'
 
     implementation 'com.android.support:design:26.0.0-alpha1'
-
+    implementation 'com.sackcentury:shinebutton:0.2.0'
+//    implementation 'com.qmuiteam:qmui:2.0.0-alpha08'
 
 }
   
