--- a/jbase/build.gradle
+++ b/jbase/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     api 'com.gyf.immersionbar:immersionbar:3.0.0'
 
     api 'com.android.support.constraint:constraint-layout:1.0.2'//正式版本
+    api 'com.hjq:toast:8.8'
 //    api 'com.qmuiteam:qmui:2.0.0-alpha08'
 //    apply plugin: 'com.github.dcendents.android-maven' // ADD THIS
 //    group='com.github.jitpack'
